# scalper-v2

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TASKS.md  compose.dev.yaml  compose.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: brief-reviewer.md  drift-checker.md  math-validator.md  plan-reviewer.md
.github/workflows/: ci-fast.yml  ci-full.yml  e2e.yml  release.yml
configs/: alerts.yaml  plugin_registry.yaml
configs/bots/: alpha.yaml  beta.yaml  demo.yaml  smoke.yaml
configs/features/: indicators.yaml
docs/: CLAUDE_CODE_BRIEF.md  OPERATOR_CONTEXT.md  review-lessons.md  status.md
docs/adr/: 0001-nats-jetstream.md  0002-hatchling-build-backend.md  0003-rate-limiter-token-bucket.md  0004-bot-credentials-env-var-source.md  0005-h024-v2-trail-after-partial-tp.md  0006-cumulative-delta-reconciliation-strategy.md  0007-apscheduler-operational-pattern.md  (+10 more)
migrations/: alembic.ini  env.py
scripts/: __init__.py  backfill_features.py  backtest.py  dev-down.sh  dev-up.sh
services/: __init__.py
services/alerting/: Dockerfile  pyproject.toml
services/alerting/app/: config.py  consumer.py  dedup.py  deps.py  health.py  main.py  telegram.py
services/alerting/tests/: conftest.py  test_config_and_lifespan.py  test_consumer.py  test_dedup.py  test_telegram.py
services/analytics_api/: Dockerfile  __init__.py  pyproject.toml
services/analytics_api/app/: analytics_cache.py  analytics_compute.py  backtest_worker.py  config.py  deps.py  health.py  main.py  sse.py
services/analytics_api/app/models/: analytics.py  audit.py  backtests.py  bots.py  configs.py  events.py  features.py  paper_trades.py  positions.py  scoring.py  shadow_aggregate.py  shadow_rejected.py  shadow_variants.py  signals.py  symbol_map.py  trades.py
services/analytics_api/app/routers/: analytics.py  audit.py  backtests.py  bots.py  configs.py  events.py  features.py  paper_trades.py  positions.py  scoring.py  shadow_aggregate.py  shadow_rejected.py  signals.py  symbol_map.py  trades.py
services/analytics_api/tests/: conftest.py  test_analytics_cache.py  test_analytics_compute.py  test_app_factory.py  test_backtest_worker.py  test_config.py  test_ready.py  test_router_analytics.py  test_router_audit.py  test_router_backtests.py  test_router_bots.py  test_router_configs.py  test_router_events.py  test_router_features.py  test_router_paper_trades.py  test_router_positions.py  test_router_scoring.py  test_router_shadow_aggregate.py  test_router_shadow_rejected.py  test_router_shadow_variants.py  test_router_signals.py  test_router_symbol_map.py  test_router_trades.py  test_sse_multiplexer.py
services/execution/: Dockerfile  __init__.py  pyproject.toml
services/execution/app/: audit.py  config.py  deps.py  dispatcher.py  equity_snapshot.py  funding_fee_poll.py  health.py  lifecycle.py  main.py  metrics.py  placement.py  placement_persist.py  pool.py  reconcile.py  restart.py  shadow_rejected_replay.py  shadow_rejected_worker.py  shadow_replay.py  shadow_worker.py  sl_watchdog.py  trail_audit.py
services/execution/tests/: conftest.py  test_app_factory.py  test_audit.py  test_audit_h021_compliance.py  test_concurrent_bot_cumulative_delta.py  test_config.py  test_dispatcher.py  test_equity_snapshot.py  test_funding_fee_poll.py  test_lifecycle.py  test_metrics.py  test_paper_parity.py  test_placement.py  test_placement_persist.py  test_pool.py  test_pool_live_safeguard.py  test_ready.py  test_reconcile.py  test_restart.py  test_shadow_parity.py  test_shadow_rejected_replay.py  test_shadow_rejected_worker.py  test_shadow_replay.py  test_shadow_worker.py  test_sl_watchdog.py  test_trail_audit.py
services/execution/tests/integration/: conftest.py  test_rejected_observation_restart.py  test_shadow_restart.py
services/feature_engine/: Dockerfile  __init__.py  pyproject.toml
services/feature_engine/app/: auto_backfill.py  config.py  constants.py  deps.py  features_registry.py  health.py  main.py  pipeline.py  warmup.py  yaml_loader.py
services/feature_engine/tests/: conftest.py  test_app_factory.py  test_auto_backfill.py  test_config.py  test_features_registry.py  test_pipeline.py  test_ready.py  test_warmup.py  test_yaml_loader.py
services/market_data/: Dockerfile  __init__.py  pyproject.toml
services/market_data/app/: config.py  deps.py  health.py  main.py
services/market_data/tests/: conftest.py  test_app_factory.py  test_config.py  test_ready.py
services/signal_gateway/: Dockerfile  README.md  __init__.py  pyproject.toml
services/signal_gateway/app/: __init__.py  config.py  dedup.py  deps.py  health.py  main.py  metrics.py  middleware.py  models.py  rate_limit.py  security.py  symbol_map.py  webhook.py
services/signal_gateway/tests/: __init__.py  conftest.py  test_app_factory.py  test_config.py  test_dedup.py  test_models.py  test_rate_limit.py  test_ready.py  test_security.py  test_symbol_map.py  test_webhook.py
services/signal_gateway/tests/integration/: conftest.py  test_webhook_e2e.py  test_webhook_outbox_e2e.py
services/strategy_engine/: Dockerfile  __init__.py  pyproject.toml
services/strategy_engine/app/: concurrent_caps_gate.py  config.py  consumer.py  cooldown_gate.py  deps.py  drawdown_gate.py  health.py  kill_switch_reconcile.py  loss_limit_gate.py  main.py  metrics.py  opposite_side_gate.py
services/strategy_engine/tests/: conftest.py  test_app_factory.py  test_concurrent_caps_gate.py  test_config.py  test_consumer.py  test_cooldown_gate.py  test_drawdown_gate.py  test_health.py  test_kill_switch_reconcile.py  test_loss_limit_gate.py  test_opposite_side_gate.py  test_ready.py
services/strategy_engine/tests/integration/: conftest.py  test_concurrent_caps_gate.py  test_cooldown_gate.py  test_drawdown_gate.py  test_kill_switch_infra.py  test_loss_limit_gate.py
tests/: test_hazard_catalog_coverage.py
ui/: .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
(+397 files in other folders)
