[project]
name = "scalper-v2"
version = "0.1.0"
description = "Multi-bot crypto-derivatives trading platform (monorepo root)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Tooling configuration (ruff, mypy --strict, pytest, bandit, pip-audit) is
# added in T-002. Dependencies per service/package are added in their
# respective later tasks (T-005+).

[tool.uv.workspace]
members = [
    "services/*",
    "packages/*",
]
