[project]
name = "scalper-v2"
version = "0.1.0"
description = "Multi-bot crypto-derivatives trading platform (monorepo root)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

[tool.uv.workspace]
members = [
    "services/*",
    "packages/*",
]

[dependency-groups]
dev = [
    "ruff~=0.15",
    "mypy~=1.11",
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "pytest-cov~=5.0",
    "bandit[toml]~=1.7",
    "pip-audit~=2.7",
    "pre-commit~=4.0",
    # Type stubs for asyncpg (used by packages/db). asyncpg itself ships
    # without a py.typed marker; the community stubs package tracks its
    # API so mypy --strict has real types instead of Any.
    "asyncpg-stubs~=0.30",
    # Alembic + SQLAlchemy land here (dev group, not packages/db runtime)
    # for T-010: migrations run via the Alembic CLI on the dev host and in
    # the deploy-time one-shot container (§18.5, deferred to T-018). No
    # SQLAlchemy Core schema or ORM usage yet — SQLAlchemy is pulled in
    # as Alembic's transitive required dep. The [asyncio] extra pulls
    # `greenlet`, which SQLAlchemy 2.0 no longer installs by default but
    # is required for any async-engine path (including Alembic's
    # `connection.run_sync(...)` in async env.py).
    "alembic==1.18.4",
    "sqlalchemy[asyncio]==2.0.49",
    # httpx backs fastapi.testclient.TestClient — used by service unit
    # tests starting with T-015a signal-gateway. Brief §3.1 names httpx
    # as the project-wide HTTP client; dev-group placement keeps it out
    # of runtime images until a service legitimately needs it in prod.
    "httpx~=0.28",
]

# -----------------------------------------------------------------------------
# Ruff — formatter + linter. Config verbatim from brief §5.1.
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle + pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "SIM",             # simplify
    "TCH",             # type-checking imports
    "RUF",             # ruff-specific
    "ASYNC",           # async patterns
    "S",               # security (bandit subset)
    "DTZ",             # naive datetime calls (§5.12 / §N1)
    "A",               # builtins shadowing
    "RET",             # return patterns
    "PT",              # pytest patterns
]
ignore = ["S101"]  # assert in tests is fine

[tool.ruff.lint.per-file-ignores]
# Tests may use assert, hardcoded passwords for fixtures, etc.
"tests/**/*.py" = ["S", "B", "PT011"]
"**/tests/**/*.py" = ["S", "B", "PT011"]

# -----------------------------------------------------------------------------
# Mypy — strict mode over services/ and packages/. Plugin type-checking policy
# lives with the plugin-loading task (§5.1 note).
# -----------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
files = ["services", "packages"]
exclude = [
    "^migrations/versions/",
    "^\\.venv/",
    "^build/",
    "^dist/",
]
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

# -----------------------------------------------------------------------------
# Pytest — async-auto, coverage wired with a 0% floor (tightened per §N5 as
# critical modules land).
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "services", "packages"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=services",
    "--cov=packages",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=0",
]
asyncio_mode = "auto"

# -----------------------------------------------------------------------------
# Coverage — source dirs, branch coverage, XML output for CI upload.
# -----------------------------------------------------------------------------

[tool.coverage.run]
source = ["services", "packages"]
branch = true
parallel = true

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.xml]
output = "coverage.xml"

# -----------------------------------------------------------------------------
# Bandit — security lint over services/ and packages/. B101 (assert) is
# skipped because pytest uses assert intentionally. B105/B106 (hardcoded
# credentials) stay on per T-002 operator decision.
# -----------------------------------------------------------------------------

[tool.bandit]
exclude_dirs = ["tests", "migrations/versions", ".venv", "build", "dist"]
skips = ["B101"]
