[project]
name = "scalper-v2-execution"
version = "0.1.0"
description = "Order placement, lifecycle FSM, SL/TP/BE/trail, cumulative-delta reconciliation, exchange adapter pool. T-214: skeleton; T-215: adapter pool composition; T-216: order placement; T-217: PositionLifecycle FSM; T-218: dispatcher; T-219: cumulative-delta close; T-220: P&L audit; T-221: post-restart reconciliation."
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.10.4",
    "fastapi==0.136.0",
    "pydantic-settings==2.13.1",
    "scalper-v2-bus",
    "scalper-v2-core",
    "scalper-v2-db",
    "scalper-v2-observability",
    "uvicorn[standard]==0.45.0",
    "uvloop==0.22.1",
]

[tool.uv.sources]
scalper-v2-bus = { workspace = true }
scalper-v2-core = { workspace = true }
scalper-v2-db = { workspace = true }
scalper-v2-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch scaffold per ADR-0002 (services/ analogue of the packages/ pattern):
# flat-layout source files live directly in services/execution/; sources
# remap adds the `services/execution/` wheel prefix so imports resolve as
# `from services.execution import ...`. Repo-root services/__init__.py is
# outside the wheel glob (PEP 420 at install time). dev-mode-dirs = ["."]
# bypasses hatchling's editable-mode detection, which trips on sources-remap
# + subpackages (pfmoore/editables#20) — load-bearing here because app/ is a
# subpackage of the service.
[tool.hatch.build.targets.wheel]
include = ["*.py", "py.typed"]
exclude = ["tests/**", "**/__pycache__/**"]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.wheel.sources]
"" = "services/execution"
