[project]
name = "scalper-v2-market-data"
version = "0.1.0"
description = "Binance WebSocket consumer, OHLC persistence, NATS fan-out. T-100: skeleton; T-104a/b: schema + pipeline; T-105: backfill."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.0",
    "pydantic-settings==2.13.1",
    "scalper-v2-bus",
    "scalper-v2-core",
    "scalper-v2-db",
    "scalper-v2-market",
    "scalper-v2-observability",
    "uvicorn[standard]==0.45.0",
    "uvloop==0.22.1",
]

[tool.uv.sources]
scalper-v2-bus = { workspace = true }
scalper-v2-core = { workspace = true }
scalper-v2-db = { workspace = true }
scalper-v2-market = { workspace = true }
scalper-v2-observability = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatch scaffold per ADR-0002 (services/ analogue of the packages/ pattern):
# flat-layout source files live directly in services/market_data/; sources
# remap adds the `services/market_data/` wheel prefix so imports resolve as
# `from services.market_data import ...`. Repo-root services/__init__.py is
# outside the wheel glob (PEP 420 at install time). dev-mode-dirs = ["."]
# bypasses hatchling's editable-mode detection, which trips on sources-remap
# + subpackages (pfmoore/editables#20) — load-bearing here because app/ is a
# subpackage of the service.
[tool.hatch.build.targets.wheel]
include = ["*.py", "py.typed"]
exclude = ["tests/**", "**/__pycache__/**"]
dev-mode-dirs = ["."]

[tool.hatch.build.targets.wheel.sources]
"" = "services/market_data"
